.github/supply-chain-fixtures/fail/postgres-pin-comment/crates/koine-store-postgres/tests/support/mod.rs
let container = Postgres::default().start();
/* Outer comment keeps the nested block executable-free.
   /* Postgres::default().with_tag("17@sha256:a426e44bac0b759c95894d68e1a0ac03ecc20b619f498a91aae373bf06d8508d").start(); */
*/
